@@ -78,7 +78,7 @@ class Tx_Seminars_Model_Checkbox extends Tx_Oelib_Model implements Tx_Seminars_I
 	/**
 	 * Returns our owner.
 	 *
-	 * @return tx_seminars_Model_FrontEndUser the owner of this model, will be NULL
+	 * @return Tx_Seminars_Model_FrontEndUser the owner of this model, will be null
 	 *                                     if this model has no owner
 	 */
 	public function getOwner() {
@@ -88,11 +88,11 @@ class Tx_Seminars_Model_Checkbox extends Tx_Oelib_Model implements Tx_Seminars_I
 	/**
 	 * Sets our owner.
 	 *
-	 * @param tx_seminars_Model_FrontEndUser $frontEndUser the owner of this model to set
+	 * @param Tx_Seminars_Model_FrontEndUser $frontEndUser the owner of this model to set
 	 *
 	 * @return void
 	 */
-	public function setOwner(tx_seminars_Model_FrontEndUser $frontEndUser) {
+	public function setOwner(Tx_Seminars_Model_FrontEndUser $frontEndUser) {
 		$this->set('owner', $frontEndUser);
 	}
 }
