@@ -48,7 +48,7 @@ class tx_seminars_Model_TargetGroup extends Tx_Oelib_Model implements Tx_Seminar
 	/**
 	 * Returns our owner.
 	 *
-	 * @return tx_seminars_Model_FrontEndUser the owner of this model, will be NULL
+	 * @return Tx_Seminars_Model_FrontEndUser the owner of this model, will be null
 	 *                                     if this model has no owner
 	 */
 	public function getOwner() {
@@ -58,11 +58,11 @@ class tx_seminars_Model_TargetGroup extends Tx_Oelib_Model implements Tx_Seminar
 	/**
 	 * Sets our owner.
 	 *
-	 * @param tx_seminars_Model_FrontEndUser $frontEndUser the owner of this model to set
+	 * @param Tx_Seminars_Model_FrontEndUser $frontEndUser the owner of this model to set
 	 *
 	 * @return void
 	 */
-	public function setOwner(tx_seminars_Model_FrontEndUser $frontEndUser) {
+	public function setOwner(Tx_Seminars_Model_FrontEndUser $frontEndUser) {
 		$this->set('owner', $frontEndUser);
 	}
 
